[package]
name = "epubimg"
version = "0.1.0"
authors = ["rot1024 <aayhrot@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
clap = { version = "3.1.8", features = ["derive"] }
regex = "1.5.5"
lazy_static = "1.4.0"
